<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginBottom="8dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:layout_marginTop="8dp"
        android:orientation="horizontal"
        android:weightSum="4">

        <TextView
            android:id="@+id/record_list_item_date"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_date"
            android:textColor="@color/gray_64"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/record_list_item_time"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/record_time"
            android:textColor="@color/gray_64"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/record_list_item_loc"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="1.2"
            android:gravity="center"
            android:text="@string/record_location"
            android:textColor="@color/gray_64"
            android:textSize="16dp"
            android:textStyle="bold" />

        <TextView
            android:id="@+id/record_list_item_status"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_weight="0.8"
            android:gravity="center"
            android:text="@string/record_status"
            android:textColor="@color/gray_64"
            android:textSize="16dp"
            android:textStyle="bold" />

    </LinearLayout>

</LinearLayout>