<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f3"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ntsdk_blue">

            <FrameLayout
                android:id="@+id/fragment_service_fl_back"
                android:layout_width="@dimen/action_bar_btn_width"
                android:layout_height="match_parent"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:src="@mipmap/button_back" />

            </FrameLayout>

            <TextView
                android:id="@+id/fragment_service_tv_action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/punch_time_service"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_action_bar"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <TextView
            android:id="@+id/fragment_service_tv_current_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/current_time"
            android:textColor="@color/ntsdk_blue"
            android:textSize="@dimen/text_size_action_bar"
            android:textStyle="bold" />

        <TextClock
            android:id="@+id/fragment_service_tv_time"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:format24Hour="HH:mm"
            android:gravity="center"
            android:text="9:41"
            android:textColor="@color/ntsdk_blue"
            android:textSize="48sp"
            tools:targetApi="jelly_bean_mr1" />

        <View
            android:layout_width="match_parent"
            android:layout_height="1dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:background="@color/gray_a1" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_service_tv_punch_on_duty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_yellow_s"
                android:gravity="center"
                android:text="@string/on_duty"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_service_tv_query_off_duty"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_yellow_s"
                android:gravity="center"
                android:text="@string/off_duty"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_service_tv_go_out"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_green_s"
                android:gravity="center"
                android:text="@string/go_out"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_service_tv_come_back"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_green_s"
                android:gravity="center"
                android:text="@string/come_back"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_service_tv_on_duty_overtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_red_s"
                android:gravity="center"
                android:text="@string/on_duty_overtime"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_service_tv_off_duty_overtime"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_red_s"
                android:gravity="center"
                android:text="@string/off_duty_overtime"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_service_tv_for_testing"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginEnd="8dp"
                android:layout_marginRight="8dp"
                android:layout_weight="1"
                android:background="@mipmap/btn_bg_purple_s"
                android:gravity="center"
                android:text="@string/for_testing"
                android:textColor="@android:color/white"
                android:textSize="24dp"
                android:textStyle="bold" />

            <TextView
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:layout_marginStart="8dp"
                android:layout_marginLeft="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/off_duty_overtime"
                android:textColor="@color/gray_f3"
                android:textSize="24dp"
                android:textStyle="bold" />

        </LinearLayout>


        <FrameLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="16dp"
            android:layout_marginEnd="16dp">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center_vertical"
                android:text="@string/select_position"
                android:textColor="@color/ntsdk_blue"
                android:textSize="16sp" />

            <TextView
                android:id="@+id/favorite"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="end|center_vertical"
                android:background="@drawable/solid_round_rectangle_blue"
                android:gravity="center"
                android:paddingStart="16dp"
                android:paddingTop="4dp"
                android:paddingEnd="16dp"
                android:paddingBottom="4dp"
                android:text="@string/favorite"
                android:textColor="@android:color/white"
                android:textSize="16sp" />

        </FrameLayout>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/beaconList"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_margin="16dp"
            android:background="@android:color/white"
            android:paddingTop="8dp"
            android:paddingBottom="8dp" />
    </LinearLayout>

</FrameLayout>