<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f3"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ntsdk_blue">

            <FrameLayout
                android:id="@+id/fragment_record_fl_back"
                android:layout_width="@dimen/action_bar_btn_width"
                android:layout_height="match_parent"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:src="@mipmap/button_back" />

            </FrameLayout>

            <TextView
                android:id="@+id/fragment_record_tv_action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/query_the_records"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_action_bar"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal"
            android:weightSum="4">

            <TextView
                android:id="@+id/fragment_record_start_date_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/record_date"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginRight="8dp" />

            <TextView
                android:id="@+id/fragment_record_start_time_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/record_time"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_record_start_location_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/record_location"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

            <TextView
                android:id="@+id/fragment_record_start_status_tv"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_weight="1"
                android:gravity="center"
                android:text="@string/record_status"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <ListView
            android:id="@+id/fragment_record_lv"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginEnd="16dp"
            android:layout_marginStart="16dp"
            android:divider="@color/gray_d8"
            android:dividerHeight="1dp"
            android:footerDividersEnabled="false" />


    </LinearLayout>

</FrameLayout>