<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/gray_f3"
    tools:context=".LoginActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center"
        android:orientation="vertical"
        android:visibility="gone"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <EditText
            android:id="@+id/activity_main_user_name"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="40dp"
            android:hint="@string/user_name"
            android:singleLine="true" />

        <EditText
            android:id="@+id/activity_main_user_id"
            android:layout_width="180dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:hint="@string/user_id"
            android:singleLine="true" />

        <Button
            android:id="@+id/button"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:gravity="center"
            android:text="@string/mobile_punch_time" />
    </LinearLayout>

    <ImageView
        android:id="@+id/logo"
        android:layout_width="match_parent"
        android:layout_height="@dimen/_36sdp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_16sdp"
        android:adjustViewBounds="true"
        android:src="@drawable/logo"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/title"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/_6sdp"
        android:gravity="center"
        android:letterSpacing="0.4"
        android:text="行動差勤按刷卡"
        android:textColor="@color/gray_33"
        android:textSize="@dimen/_16sdp"
        android:textStyle="bold"
        app:layout_constraintTop_toBottomOf="@+id/logo" />

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_gravity="center"
        android:layout_marginTop="@dimen/_12sdp"
        android:layout_marginBottom="@dimen/_24sdp"
        android:adjustViewBounds="true"
        android:alpha="0.8"
        android:scaleType="centerCrop"
        android:src="@drawable/banner"
        app:layout_constraintBottom_toTopOf="@+id/loginLayout"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/title" />

    <LinearLayout
        android:id="@+id/loginLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="@dimen/_36sdp"
        android:gravity="center"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent">

        <LinearLayout
            android:id="@+id/fragment_login_ll_login_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginLeft="16dp"
            android:layout_marginRight="16dp"
            android:background="@color/blue_e9"
            android:orientation="vertical"
            android:padding="@dimen/_12sdp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:text="@string/login_account"
                android:textColor="@color/blue_20"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/account_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_8sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/login_page_type_account"
                android:imeOptions="actionNext"
                android:inputType="text"
                android:lines="1"
                android:maxLength="30"
                android:maxLines="1"
                android:nextFocusDown="@id/password_et"
                android:padding="@dimen/_13sdp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray_99"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/_12sdp" />

            <EditText
                android:id="@+id/password_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/bg_edittext"
                android:hint="@string/login_page_type_password"
                android:imeOptions="actionDone"
                android:inputType="textPassword"
                android:lines="1"
                android:maxLength="30"
                android:maxLines="1"
                android:padding="@dimen/_13sdp"
                android:singleLine="true"
                android:textColor="@color/colorPrimary"
                android:textColorHint="@color/gray_99"
                android:textCursorDrawable="@drawable/cursor_color"
                android:textSize="@dimen/_12sdp" />

            <TextView
                android:id="@+id/fragment_login_tv_login"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/_12sdp"
                android:background="@drawable/solid_round_rectangle_blue"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:padding="@dimen/_12sdp"
                android:text="@string/login"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>

        <LinearLayout
            android:id="@+id/fingerprint_layout"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginStart="@dimen/_24sdp"
            android:layout_marginTop="@dimen/_16sdp"
            android:layout_marginEnd="@dimen/_24sdp"
            android:background="@drawable/solid_round_rectangle_red"
            android:gravity="center"
            android:orientation="horizontal"
            android:visibility="invisible">

            <ImageView
                android:id="@+id/fingerprint_iv"
                android:layout_width="wrap_content"
                android:layout_height="@dimen/_20sdp"
                android:layout_gravity="center"
                android:adjustViewBounds="true"
                android:src="@drawable/fingerprint"
                app:tint="@color/white" />

            <TextView
                android:id="@+id/fragment_login_tv_login_fingerprint"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:gravity="center"
                android:letterSpacing="0.2"
                android:padding="@dimen/_12sdp"
                android:text="@string/fingerprint"
                android:textColor="@android:color/white"
                android:textSize="@dimen/_14sdp"
                android:textStyle="bold" />
        </LinearLayout>
    </LinearLayout>

</android.support.constraint.ConstraintLayout>