<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:clickable="true"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:background="@color/gray_f3"
        android:orientation="vertical">

        <androidx.appcompat.widget.Toolbar
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/ntsdk_blue">

            <FrameLayout
                android:id="@+id/fragment_query_fl_back"
                android:layout_width="@dimen/action_bar_btn_width"
                android:layout_height="match_parent"
                android:layout_gravity="left">

                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:gravity="center"
                    android:src="@mipmap/button_back" />

            </FrameLayout>

            <TextView
                android:id="@+id/fragment_query_tv_action_bar_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:text="@string/query_the_records"
                android:textColor="@android:color/white"
                android:textSize="@dimen/text_size_action_bar"
                android:textStyle="bold" />

        </androidx.appcompat.widget.Toolbar>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_record_start_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/query_the_records_start_time"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginRight="8dp" />

            <EditText
                android:id="@+id/fragment_record_start_time_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:focusable="false"
                android:gravity="center"
                android:inputType="date"
                android:singleLine="true"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginEnd="24dp"
            android:layout_marginStart="24dp"
            android:layout_marginTop="24dp"
            android:orientation="horizontal">

            <TextView
                android:id="@+id/fragment_record_end_time_tv"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="center"
                android:layout_marginEnd="8dp"
                android:gravity="center"
                android:text="@string/query_the_records_end_time"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold"
                android:layout_marginRight="8dp" />

            <EditText
                android:id="@+id/fragment_record_end_time_et"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginEnd="8dp"
                android:layout_marginStart="8dp"
                android:focusable="false"
                android:gravity="center"
                android:inputType="date"
                android:singleLine="true"
                android:textColor="@color/ntsdk_blue"
                android:textSize="20dp"
                android:textStyle="bold" />

        </LinearLayout>

        <TextView
            android:id="@+id/fragment_record_query_tv"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="40dp"
            android:background="@mipmap/btn_bg_green_m"
            android:gravity="center"
            android:text="@string/query"
            android:textColor="@android:color/white"
            android:textSize="@dimen/text_size_action_bar"
            android:textStyle="bold" />


    </LinearLayout>

</FrameLayout>